Add code lesson_006