@@ -1,18 +1,21 @@
 package com.elearning.security;
 
 
+import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.JwtException;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -34,10 +37,14 @@ public class JwtAuthFilter extends OncePerRequestFilter {
         }}
         String token = header.substring(7);
          try {
+             Claims claims = jwtService.extractClaims(token);
              String email = jwtService.extractEmail(token);
+             String role = claims.get("role", String.class);
 
-             var authentication = new UsernamePasswordAuthenticationToken(
-                     email, null, Collections.emptyList());
+             var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+             var authentication = new UsernamePasswordAuthenticationToken(email, null, authorities);
+
              SecurityContextHolder.getContext().setAuthentication(authentication);
 
          }
